domainagent/kubernetes/existing/aamanifests/sender-deployment.yaml
# sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender-agent
  labels:
    app: sender-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender-agent
  template:
    metadata:
      labels:
        app: sender-agent
    spec:
      containers:
        - name: sender
          image: aqls/sender-agent:latest
